working testfx